--- a/projetoIntegrador/frontend/cigDia.html
+++ b/projetoIntegrador/frontend/cigDia.html
@@ -8,6 +8,7 @@
 
     <meta charset='utf-8' />
     <link rel="stylesheet" href="assets/style/cigDia.css"/>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link href='assets/api/calendario/fullcalendar.min.css' rel='stylesheet' />
     <script src='assets/api/calendario/lib/moment.min.js'></script>
     <script src='assets/api/calendario/lib/jquery.min.js'></script>
