--- a/projetoIntegrador/frontend/home.html
+++ b/projetoIntegrador/frontend/home.html
@@ -11,49 +11,13 @@
 <body>
     <main>
         <div class="top">
-            <button class="links"><a href="cigDia.html">Relatórios</a></button>
-            <button class="links"><a href="home.html">Home</a></button>
-            <button class="links"><a href="user.html">Perfil</a></button>
+           <div class="cigDia"><a href="cigDia.html">RELATÓRIOS</a></div>
+           <div>HOME</div>
+           <div class="user"><a href="user.html">PERFIL</a></div>
         </div>
         <div class="mid">
             <div class="imagem">
                 <img src="assets/carteira.png"/>
-            </div>
-            <div class="mensagens">
-                <div class="dia">
-                    <div>Dia 1 </div>
-                    <div>Tão naturalmente quanto respiro, reorganizo meus recursos para me tornar mais saudável.</div>
-                </div>
-                <div class="qtd">
-                    Qtd: 11
-                </div>
-            </div>
-            <div class="mensagens">
-                <div class="dia">
-                    <div>Dia 2 </div>
-                    <div>Quais comportamentos novos podem ser interessantes para fluir de forma mais saudável nos ambientes em que eu fumava?</div>
-                </div>
-                <div class="qtd">
-                    Qtd: 10
-                </div>
-            </div>
-            <div class="mensagens">
-                <div class="dia">
-                    <div>Dia 3 </div>
-                    <div>Esse resultado é possível de ser alcançado, eu tenho todos os recursos para isso e, mais que qualquer coisa, eu mereço o que existe de melhor para a minha vida!</div>
-                </div>
-                <div class="qtd">
-                    Qtd: 11
-                </div>
-            </div>
-            <div class="mensagens">
-                <div class="dia">
-                    <div>Dia 4 </div>
-                    <div>Por que é importante construir esse resultado, e quais recursos e capacidades podem me levar a novos comportamentos nesses ambientes?</div>
-                </div>
-                <div class="qtd">
-                    Qtd: 9
-                </div>
             </div>                    
         </div>
     </main>
